Tried to receive streaming but not succeeded

--- a/janus-interface-webpack/index.html
+++ b/janus-interface-webpack/index.html
@@ -6,10 +6,10 @@
     <title>Janus streaming</title>
 </head>
 <body>
-    <h1>Janu streaming</h1>
-    <video id="localVideo" autoplay muted></video>
-    <video id="remoteVideo" autoplay></video>
-    <audio id="remoteAudio" autoplay></audio>
+    <h1>Janus streaming</h1>
+    <!-- <video id="localVideo" autoplay muted></video> -->
+    <video id="videoStream" autoplay></video>
+    <!-- <audio id="remoteAudio" autoplay></audio> -->
     <script src="dist/bundle.js"></script>
 </body>
 </html>
